# type_hash

core/: Cargo.toml
core/src/: lib.rs
macros/src/: lib.rs
